[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mats_sae_training"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version>"3.10"',
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["sae_training","sae_analysis"]  # ["*"] by default
namespaces = false  # true by default